sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>LEM-5367: It is used to display Opportunity Contact Role details section of the onboarding details on Work Plan.</description>
    <formula>Contact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>