sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>LEM-5367: It is used to display Opportunity Contact Role details section of the onboarding details on Work Plan.</description>
    <formula>Contact.Contact_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>