sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Contact_Role_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Added_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13540: It stores the date when Opportunity Contact Role was added to the Opportunity.</description>
    <inlineHelpText>The date the contact role as added to the opportunity.</inlineHelpText>
    <label>Contact Role Added Date</label>
    <type>Date</type>
</CustomField>