sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>LEM-594: This field is used for data migration from Figment to Lemonade.</description>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <complianceGroup>GDPR</complianceGroup>
</CustomField>