sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-229: Represents the preferred language of the contact.</description>
    <formula>TEXT(Contact.Preferred_Language__c )</formula>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>