sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Primary_Contact_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Confirmed_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13540: It stores the date when Opportunity Contact Role was marked primary.</description>
    <inlineHelpText>The date the contact role was confirmed as the Primary Contact.</inlineHelpText>
    <label>Primary Contact Confirmed Date</label>
    <type>Date</type>
</CustomField>