sfdx-source/force-app/main/default/objects/OpportunityContactRole/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-953: Sending a contract for signature - get external signers</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Opportunity Contact Role</relationshipLabel>
    <relationshipName>Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>